Working on solving the layout issue.

--- a/src/styles/50-core-components/_intro.scss
+++ b/src/styles/50-core-components/_intro.scss
@@ -1,6 +1,14 @@
 .intro {
   --measure: 33ch;
 
+  .l-columns > :first-child {
+    --columns-item-span: calc((var(--columns) / 5) * 3);
+  }
+
+  .l-columns > :last-child {
+    --columns-item-span: calc((var(--columns) / 5) * 2);
+  }
+
   img {
     --nav-block-size: calc(0.8em * 2) + calc(var(--leading-flat) * 1em);
     --header-block-size: calc(100% + var(--space-s-m) + var(--nav-block-size));
